refactor ApiResponse and GlobalExceptionHandler for improved error handling and response structure